<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="AppTitle">In Case of Emergency!</string>
    <string name="app_name">zyxwv ICE</string>

    <string name="bn_Cancel">Cancel</string>

    <string name="sh_MyInfo">My Information</string>
    <string name="sh_MyMeds">My Medications</string>
    <string name="sh_MyAllergies">My Allergies</string>
    <string name="sh_MyConditions">My Conditions</string>
    <string name="sh_1Contact">1st Emergency Contact</string>
    <string name="sh_2Contact">2nd Emergency Contact</string>
    <string name="sh_PCF">Primary Care Facility</string>
    <string name="sh_PCP">Primary Care Physician</string>
    <string name="sh_SCP">Secondary Care Physician</string>
    <string name="sh_HealthIns">Health Insurance</string>
    <string name="sh_Notes">Other Notes</string>

    <string name="dh_PhotoGet">Select a Photo. \nOnly .png, .jpg or .gif files can be used.</string>
    <string name="dh_BakPut">Select a backup folder</string>
    <string name="dh_BakGet">Select a backup file</string>

    <string name="dbName">ICE</string>
    <string name="dbTableName">IceInfo</string>
    <string name="FilePath">/data/data/net.zyxwv.ice/files/</string>
    <string name="dt_HelpText">Your help text file is missing.</string>

    <string name="email_Title">SendTo Email:</string>
    <string name="email_to">Email To: </string>
    <string name="email_subject">Subject: </string>
    <string name="email_subject_text">Data for [#Name#]</string>
    <string name="email_body">Email Text: </string>
    <string name="email_send">Send Email</string>


    <string name="title_activity_info_edit">InfoEdit</string>
    <string name="title_activity_dlg__open">Dlg_Open</string>
    <string name="title_activity_text_edit">TextEdit</string>
    <string name="title_activity_splash">Splash</string>

    <string name="action_settings">Settings</string>
    <string name="action_email">Email this data</string>
    <string name="action_delete">Delete This Person</string>
    <string name="action_delete_confirm">Are you sure you want to delete this person?</string>

    <string name="splash_dropdown_prompt">Person to View: </string>
    <string name="title_activity_email">Email</string>
</resources>
