<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_email"
    tools:context="net.zyxwv.ice.Email">

    <TextView
        android:id="@+id/tvTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/email_to"
        />
    <EditText
        android:id="@+id/etTo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/tvTo"
        />

    <TextView
        android:id="@+id/tvSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etTo"
        android:text="@string/email_subject"
        />
    <EditText
        android:id="@+id/etSubject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etTo"
        android:layout_toRightOf="@id/tvSubject"
        />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etSubject"
        android:text="@string/email_body"
        />
    <EditText
        android:id="@+id/etBody"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etSubject"
        android:layout_toRightOf="@id/tvBody"
        android:inputType="textMultiLine"
        />

    <Button
        android:id="@+id/bnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etBody"
        android:onClick="EmailSend"
        android:text="@string/email_send"
        />
    <Button
        android:id="@+id/bnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etBody"
        android:layout_toRightOf="@id/bnSend"
        android:onClick="EmailCancel"
        android:text="@string/bn_Cancel"
        />


</RelativeLayout>
</ScrollView>